--- a/index.html
+++ b/index.html
@@ -167,6 +167,7 @@ body {
 /* Heading styling */
 .welcome h1 {
   font-size: 3rem;
+  margin-top: 100px;
   margin-bottom: 20px;
   color: #ff000a;
   opacity: 0; /* Make text initially invisible */
