--- a/index.html
+++ b/index.html
@@ -3,19 +3,19 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="StreamQash Agencies is your trusted platform for unlocking financial freedom and endless earning opportunities. Powered by SMARTTECH MANAGEMENT, we provide innovative ways to earn, including affiliate marketing, video engagement, trivia questions, ad clicking, and more. Join us today for instant rewards, 24/7 support, and a seamless user experience.">
-  <meta name="keywords" content="StreamQash, StreamQash Agencies Kenya, SMARTTECH MANAGEMENT, online earning Kenya, affiliate marketing Kenya, trivia questions, video engagement, ad clicking platform, earning opportunities Kenya, financial freedom platform, modern earning website, StreamQash Agencies Ghana">
-  <meta property="og:title" content="StreamQash Agencies - Unlock Financial Freedom">
-  <meta property="og:description" content="Join StreamQash and explore diverse ways to earn online. From affiliate marketing to video engagement, we empower you to achieve financial freedom effortlessly.">
+  <meta name="description" content="HeroQash Agencies is your trusted platform for unlocking financial freedom and endless earning opportunities. Powered by SMARTTECH MANAGEMENT, we provide innovative ways to earn, including affiliate marketing, video engagement, trivia questions, ad clicking, and more. Join us today for instant rewards, 24/7 support, and a seamless user experience.">
+  <meta name="keywords" content="HeroQash, HeroQash Agencies Kenya, SMARTTECH MANAGEMENT, online earning Kenya, affiliate marketing Kenya, trivia questions, video engagement, ad clicking platform, earning opportunities Kenya, financial freedom platform, modern earning website, HeroQash Agencies Ghana">
+  <meta property="og:title" content="HeroQash Agencies - Unlock Financial Freedom">
+  <meta property="og:description" content="Join HeroQash and explore diverse ways to earn online. From affiliate marketing to video engagement, we empower you to achieve financial freedom effortlessly.">
   <meta property="og:image" content="file.webp">
   <meta property="og:url" content="https://streamwa-ve.github.io">
   <meta property="og:type" content="website">
-  <meta name="twitter:title" content="StreamQash Agencies">
-  <meta name="twitter:description" content="Discover innovative earning opportunities with StreamQash. Register today for instant rewards and financial growth!">
+  <meta name="twitter:title" content="HeroQash Agencies">
+  <meta name="twitter:description" content="Discover innovative earning opportunities with HeroQash. Register today for instant rewards and financial growth!">
   <meta name="twitter:image" content="file.webp">
   <meta name="twitter:card" content="summary_large_image">
   
-  <title>STREAMQASH AGENCIES</title>
+  <title>HeroQash AGENCIES</title>
   <link rel="stylesheet" href="st.css">
   <style>
       /* General Reset */
@@ -690,13 +690,13 @@ body {
   <!-- HEADER -->
  <!-- HEADER SECTION -->
 <div class="header">
-  <div class="logo"><strong>STREAMQASH</strong></div></head~|>
+  <div class="logo"><strong>HeroQash</strong></div></head~|>
   
   <div class="hamburger-menu" id="hamburgerMenu" onclick="toggleMenu()">&#9776;</div>
   </div>
 
 <div class="top-buttons">
-        <a href="https://api.whatsapp.com/send?phone=+254748000578&text=Hey+there+tell+me+more+about+StreamQash">WhatsApp</a>
+        <a href="https://api.whatsapp.com/send?phone=+254748000578&text=Hey+there+tell+me+more+about+HeroQash">WhatsApp</a>
         <a href="tel:+254748000578">Call Now</a>
         <a href="https://www.streamwa-ve.com/user/register.php?ref=RayaSTAMET">Register</a>
     </div>
@@ -706,7 +706,7 @@ body {
   <ul>
     <li><a href="#home">Home</a></li>
     <li><a href="https://www.streamwa-ve.com/user/register.php?ref=RayaSTAMET">Create account now</a></li>
-    <li><a href="#about">What is StreamQash?</a></li>
+    <li><a href="#about">What is HeroQash?</a></li>
     <li><a href="#features">Features</a></li>
     <li><a href="#contact">Contact Us</a></li>
   </ul>
@@ -715,17 +715,17 @@ body {
 
   <!-- WELCOME SECTION -->
   <section id="welcome" class="welcome">
-    <h1>Welcome to StreamQash Agencies</h1>
+    <h1>Welcome to HeroQash Agencies</h1>
     <p><strong>Where possibilities turn into success. We offer a reliable, innovative platform designed to empower you. With round-the-clock support and instant access to rewards, your journey to greatness begins here. Join us today and redefine your future!</strong></p>
      <div class="cta-container">
             <a href="https://www.streamwa-ve.com/user/register.php?ref=RayaSTAMET" class="get-started-btn">Get Started</a>
         </div>
   </section>
 
-  <!-- WHAT IS STREAMQASH SECTION -->
+  <!-- WHAT IS HeroQash SECTION -->
   <section id="about" class="about">
-    <h2>What is StreamQash?</h2>
-    <p>StreamQash is a revolutionary platform designed to empower you with endless opportunities for growth and success. Explore our features and audio summaries below to learn how we make it happen!</p>
+    <h2>What is HeroQash?</h2>
+    <p>HeroQash is a revolutionary platform designed to empower you with endless opportunities for growth and success. Explore our features and audio summaries below to learn how we make it happen!</p>
   </section>
 
   <!-- FEATURES SECTION -->
@@ -743,7 +743,7 @@ body {
                 <div class="feature bounce-in">
                         <svg xmlns="http://www.w3.org/2000/svg" height="32" width="32" fill="#a400ff" data-name="Layer 1" viewBox="0 0 128 128" id="demonstrates"><path d="M109 54H49a2 2 0 0 0 0 4h60a2 2 0 0 0 0-4zm0-8H49a2 2 0 0 0 0 4h60a2 2 0 0 0 0-4zm0-8H79.727a12.059 12.059 0 0 1-4.945 4H109a2 2 0 0 0 0-4zm-13-4a4.004 4.004 0 0 0 4-4v-6a4.004 4.004 0 0 0-4-4H74.782a12.059 12.059 0 0 1 4.945 4H96l.003 6H81.949c.028.33.051.662.051 1a11.941 11.941 0 0 1-.395 3z"></path><path d="M126 64h-4V17.95c-.33.03-.662.05-1 .05h-3v46H46v4h22.95l-2.683 6.17a16.843 16.843 0 0 1 3.921 1.013L73.311 68H84.69l4.357 10.02a17.037 17.037 0 0 1 3.394-2.224L89.05 68H126a2 2 0 0 0 0-4zM12 84h.526a17.027 17.027 0 0 1 2.536-4H10v-3.18A11.982 11.982 0 0 1 8 77a11.982 11.982 0 0 1-2-.18V82a2 2 0 0 0 2 2v14.724l4-.737v-1.298a16.683 16.683 0 0 1 0-11.378zM38.456 4H121a3 3 0 0 1 0 6H41.036a17.947 17.947 0 0 1 .464 4H121a7 7 0 0 0 0-14H37a6.966 6.966 0 0 0-1.89.267A18.141 18.141 0 0 1 38.455 4z"></path><path d="M42 39h28a8 8 0 0 0 0-16H39.064a18.097 18.097 0 0 1-3.148 4H70a4 4 0 0 1 0 8H40a2 2 0 0 0-2 2v40.283a17.125 17.125 0 0 1 4 4.095zM8 73a8.01 8.01 0 0 0 8-8V45.663a2 2 0 0 0-4 0V65a4 4 0 0 1-8 0V31.199C4 28.883 6.333 27 9.2 27h1.884a18.096 18.096 0 0 1-3.1-3.92C3.485 23.613 0 27.046 0 31.2V65a8.01 8.01 0 0 0 8 8zm15.5-45a14 14 0 1 0-14-14 14.016 14.016 0 0 0 14 14zm0-24a10 10 0 1 1-10 10 10.011 10.011 0 0 1 10-10zM100 104a13 13 0 1 0-13-13 13.015 13.015 0 0 0 13 13zm0-22a9 9 0 1 1-9 9 9.01 9.01 0 0 1 9-9zm-72 22a13 13 0 1 0-13-13 13.015 13.015 0 0 0 13 13zm0-22a9 9 0 1 1-9 9 9.01 9.01 0 0 1 9-9zM4.052 124l2.957-15.752c.008-.044.014-.087.02-.131a1.596 1.596 0 0 1 1.394-1.336l9.898-1.824a17.123 17.123 0 0 1-3.621-3.4l-6.951 1.281a5.59 5.59 0 0 0-4.683 4.729L.041 123.694A3.754 3.754 0 0 0 3.749 128h29.225a7.75 7.75 0 0 1-.967-4zm120.882-16.433a5.573 5.573 0 0 0-4.632-4.72l-7.002-1.29a17.127 17.127 0 0 1-3.62 3.4l9.948 1.833a1.575 1.575 0 0 1 1.344 1.327c.005.044.011.087.02.13L123.95 124H95.993a7.75 7.75 0 0 1-.967 4h29.225a3.743 3.743 0 0 0 2.834-1.298 3.799 3.799 0 0 0 .861-3.086zm-36 0a5.573 5.573 0 0 0-4.632-4.72l-7.002-1.29a17.127 17.127 0 0 1-3.62 3.4l9.948 1.833a1.575 1.575 0 0 1 1.344 1.327c.005.044.011.087.02.13L87.95 124H40.052l2.957-15.752c.008-.044.014-.087.02-.131a1.596 1.596 0 0 1 1.394-1.336l9.898-1.824a17.123 17.123 0 0 1-3.621-3.4l-6.951 1.281a5.59 5.59 0 0 0-4.683 4.729l-3.025 16.127A3.754 3.754 0 0 0 39.749 128h48.502a3.743 3.743 0 0 0 2.834-1.298 3.799 3.799 0 0 0 .861-3.086z"></path><path d="M64 104a13 13 0 1 0-13-13 13.015 13.015 0 0 0 13 13Zm0-22a9 9 0 1 1-9 9 9.01 9.01 0 0 1 9-9Z"></path></svg>
                     <h3>WATCH VIDEOS</h3>
-                    <p>Get paid to watch interesting videos! StreamQash partners with various video platforms to bring you opportunities to earn rewards.</p>
+                    <p>Get paid to watch interesting videos! HeroQash partners with various video platforms to bring you opportunities to earn rewards.</p>
                 </div>
                 <!-- Feature 3 -->
                 <div class="feature bounce-in">
@@ -755,12 +755,12 @@ body {
                 <div class="feature bounce-in">
                    <svg xmlns="http://www.w3.org/2000/svg" height="32" width="32" fill="#5000ff" viewBox="0 0 60 60" id="charts"><path d="M22.472,17.521a3.532,3.532,0,0,0-4.951,0L.719,34.338A2.391,2.391,0,0,0,0,36.045a2.42,2.42,0,0,0,.713,1.732l1.511,1.511A2.418,2.418,0,0,0,3.943,40h.011a2.387,2.387,0,0,0,1.7-.713L20,24.955l7.526,7.526a3.532,3.532,0,0,0,4.951,0l22.5-22.5.3.3a2.449,2.449,0,0,0,2.593.572,2.485,2.485,0,0,0,1.642-2.139l.48-6.04V2.659A2.5,2.5,0,0,0,57.327.006L51.279.487a2.48,2.48,0,0,0-2.13,1.641A2.447,2.447,0,0,0,49.72,4.72l.3.3L30,25.047ZM52.145,5.73a1,1,0,0,0,0-1.414l-1.011-1.01a.451.451,0,0,1-.1-.494.487.487,0,0,1,.417-.332L57.473,2a.494.494,0,0,1,.381.145A.481.481,0,0,1,58,2.521l-.479,6.024a.492.492,0,0,1-.333.426.455.455,0,0,1-.5-.106l-1.009-1.01a1,1,0,0,0-1.414,0L31.065,31.06a1.517,1.517,0,0,1-2.129,0l-8.23-8.229a1,1,0,0,0-1.414,0L4.237,37.879A.413.413,0,0,1,3.945,38h0a.432.432,0,0,1-.306-.127L2.128,36.364A.434.434,0,0,1,2,36.055a.419.419,0,0,1,.127-.3L18.932,18.942a1.521,1.521,0,0,1,2.13,0l8.229,8.23a1,1,0,0,0,1.414,0Z"></path><path d="M58,54.184V29a3,3,0,0,0-3-3H45a3,3,0,0,0-3,3V54H38V39a3,3,0,0,0-3-3H25a3,3,0,0,0-3,3V54H18V45a3,3,0,0,0-3-3H5a3,3,0,0,0-3,3v9.184A2.993,2.993,0,0,0,3,60H57a2.993,2.993,0,0,0,1-5.816ZM44,29a1,1,0,0,1,1-1H55a1,1,0,0,1,1,1V54H44ZM24,39a1,1,0,0,1,1-1H35a1,1,0,0,1,1,1V54H24ZM5,44H15a1,1,0,0,1,1,1v9H4V45A1,1,0,0,1,5,44ZM57,58H3a1,1,0,0,1,0-2H57a1,1,0,0,1,0,2Z"></path></svg>
                     <h3>FOREX TRADING SIGNALS</h3>
-                    <p>Get accurate and timely forex trading signals from experts. Maximize your investment potential with StreamQash!</p>
+                    <p>Get accurate and timely forex trading signals from experts. Maximize your investment potential with HeroQash!</p>
                 </div>
                 <div class="feature bounce-in">
                         <svg xmlns="http://www.w3.org/2000/svg" height="32" width="32" fill="#a400ff" data-name="Layer 1" viewBox="0 0 128 128" id="demonstrates"><path d="M109 54H49a2 2 0 0 0 0 4h60a2 2 0 0 0 0-4zm0-8H49a2 2 0 0 0 0 4h60a2 2 0 0 0 0-4zm0-8H79.727a12.059 12.059 0 0 1-4.945 4H109a2 2 0 0 0 0-4zm-13-4a4.004 4.004 0 0 0 4-4v-6a4.004 4.004 0 0 0-4-4H74.782a12.059 12.059 0 0 1 4.945 4H96l.003 6H81.949c.028.33.051.662.051 1a11.941 11.941 0 0 1-.395 3z"></path><path d="M126 64h-4V17.95c-.33.03-.662.05-1 .05h-3v46H46v4h22.95l-2.683 6.17a16.843 16.843 0 0 1 3.921 1.013L73.311 68H84.69l4.357 10.02a17.037 17.037 0 0 1 3.394-2.224L89.05 68H126a2 2 0 0 0 0-4zM12 84h.526a17.027 17.027 0 0 1 2.536-4H10v-3.18A11.982 11.982 0 0 1 8 77a11.982 11.982 0 0 1-2-.18V82a2 2 0 0 0 2 2v14.724l4-.737v-1.298a16.683 16.683 0 0 1 0-11.378zM38.456 4H121a3 3 0 0 1 0 6H41.036a17.947 17.947 0 0 1 .464 4H121a7 7 0 0 0 0-14H37a6.966 6.966 0 0 0-1.89.267A18.141 18.141 0 0 1 38.455 4z"></path><path d="M42 39h28a8 8 0 0 0 0-16H39.064a18.097 18.097 0 0 1-3.148 4H70a4 4 0 0 1 0 8H40a2 2 0 0 0-2 2v40.283a17.125 17.125 0 0 1 4 4.095zM8 73a8.01 8.01 0 0 0 8-8V45.663a2 2 0 0 0-4 0V65a4 4 0 0 1-8 0V31.199C4 28.883 6.333 27 9.2 27h1.884a18.096 18.096 0 0 1-3.1-3.92C3.485 23.613 0 27.046 0 31.2V65a8.01 8.01 0 0 0 8 8zm15.5-45a14 14 0 1 0-14-14 14.016 14.016 0 0 0 14 14zm0-24a10 10 0 1 1-10 10 10.011 10.011 0 0 1 10-10zM100 104a13 13 0 1 0-13-13 13.015 13.015 0 0 0 13 13zm0-22a9 9 0 1 1-9 9 9.01 9.01 0 0 1 9-9zm-72 22a13 13 0 1 0-13-13 13.015 13.015 0 0 0 13 13zm0-22a9 9 0 1 1-9 9 9.01 9.01 0 0 1 9-9zM4.052 124l2.957-15.752c.008-.044.014-.087.02-.131a1.596 1.596 0 0 1 1.394-1.336l9.898-1.824a17.123 17.123 0 0 1-3.621-3.4l-6.951 1.281a5.59 5.59 0 0 0-4.683 4.729L.041 123.694A3.754 3.754 0 0 0 3.749 128h29.225a7.75 7.75 0 0 1-.967-4zm120.882-16.433a5.573 5.573 0 0 0-4.632-4.72l-7.002-1.29a17.127 17.127 0 0 1-3.62 3.4l9.948 1.833a1.575 1.575 0 0 1 1.344 1.327c.005.044.011.087.02.13L123.95 124H95.993a7.75 7.75 0 0 1-.967 4h29.225a3.743 3.743 0 0 0 2.834-1.298 3.799 3.799 0 0 0 .861-3.086zm-36 0a5.573 5.573 0 0 0-4.632-4.72l-7.002-1.29a17.127 17.127 0 0 1-3.62 3.4l9.948 1.833a1.575 1.575 0 0 1 1.344 1.327c.005.044.011.087.02.13L87.95 124H40.052l2.957-15.752c.008-.044.014-.087.02-.131a1.596 1.596 0 0 1 1.394-1.336l9.898-1.824a17.123 17.123 0 0 1-3.621-3.4l-6.951 1.281a5.59 5.59 0 0 0-4.683 4.729l-3.025 16.127A3.754 3.754 0 0 0 39.749 128h48.502a3.743 3.743 0 0 0 2.834-1.298 3.799 3.799 0 0 0 .861-3.086z"></path><path d="M64 104a13 13 0 1 0-13-13 13.015 13.015 0 0 0 13 13Zm0-22a9 9 0 1 1-9 9 9.01 9.01 0 0 1 9-9Z"></path></svg>
                     <h3>AFFILIATE MARKETING</h3>
-                    <p>With this feature you earn rewards by promoting the platform. The more people discover and engage with StreamQash, the more you earn!
+                    <p>With this feature you earn rewards by promoting the platform. The more people discover and engage with HeroQash, the more you earn!
 
 .</p>
                 </div>
@@ -775,14 +775,14 @@ body {
   <div class="audio-track">
     <h3>Kenya Summary</h3>
     <audio controls>
-      <source src="Ksummary.opus">
+      <source src="khsummary.opus">
     </audio>
   </div>
   
   <div class="audio-track">
     <h3>Ghana Summary</h3>
     <audio controls>
-      <source src="Gsummary.opus">
+      <source src="#">
     </audio>
   </div>
   
@@ -794,13 +794,13 @@ body {
     <div class="audio-track">
       <h3>Nigeria Summary</h3>
       <audio controls>
-        <source src="Nsummary.opus">
+        <source src="#">
       </audio>
     </div>
     <div class="audio-track">
       <h3>South Africa Summary</h3>
       <audio controls>
-        <source src="SAsummary.opus">
+        <source src="#">
       </audio>
     </div>
   </div>
@@ -811,7 +811,7 @@ body {
     <a href="https://www.streamwa-ve.com/user/register.php?ref=RayaSTAMET">
   <button class="register-main">Register</button>
 </a>
-    <a href="https://api.whatsapp.com/send?phone=+254748000578&text=Hey+there+tell+me+more+about+StreamQash">
+    <a href="https://api.whatsapp.com/send?phone=+254748000578&text=Hey+there+tell+me+more+about+HeroQash">
   <button class="whatsapp-btn">Whatsapp us</button>
 </a>
   </section>
@@ -819,10 +819,10 @@ body {
   <!-- WHY CHOOSE US SECTION -->
  <section id="advantages">
         <div class="container">
-            <h2 class="fade-in">Why Choose StreamQash?</h2>
+            <h2 class="fade-in">Why Choose HeroQash?</h2>
             <ul>
-                <li><strong>Reliable Earnings:</strong> StreamQash offers multiple income-generating options, including ads clicking, video watching, and surveys.</li>
-                <li><strong>Global Reach:</strong> No matter where you are, StreamQash is available worldwide, making it easy for you to participate and earn.</li>
+                <li><strong>Reliable Earnings:</strong> HeroQash offers multiple income-generating options, including ads clicking, video watching, and surveys.</li>
+                <li><strong>Global Reach:</strong> No matter where you are, HeroQash is available worldwide, making it easy for you to participate and earn.</li>
                 <li><strong>Fast Payouts:</strong> Once you start earning, you can quickly withdraw your earnings to your preferred payment method.</li>
                 <li><strong>24/7 Support:</strong> Our support team is always available to assist you with any questions or issues you may have.</li>
                 
@@ -833,7 +833,7 @@ body {
   <!-- TESTIMONIALS SECTION -->
   <section id="testimonials" class="testimonials">
     <h2>What Our Members Say</h2>
-    <div class="testimonial"><p>"StreamQash has transformed my life! So easy and reliable."- <strong>Mentor Bee</strong> </p></div>
+    <div class="testimonial"><p>"HeroQash has transformed my life! So easy and reliable."- <strong>Mentor Bee</strong> </p></div>
     <div class="testimonial"><p>"I earn consistently every day. Best decision ever!"- <strong>RAYASTAMENTS</strong></p></div>
     <div class="testimonial"><p>"Excellent platform with great customer service."- <strong>Nana🇬🇭</strong></p></div>
   </section>
@@ -842,8 +842,8 @@ body {
   <section id="faq" class="faq">
     <h2>Frequently Asked Questions</h2>
     <div class="faq-item">
-      <h3>What is StreamQash?</h3>
-      <p>StreamQash is an innovative platform offering various ways to earn and grow financially.</p>
+      <h3>What is HeroQash?</h3>
+      <p>HeroQash is an innovative platform offering various ways to earn and grow financially.</p>
     </div>
     <div class="faq-item">
       <h3>How do I register?</h3>
@@ -860,7 +860,7 @@ body {
   <h2>Gallery</h2>
   <div class="gallery-container">
       <div class="gallery-item">
-      <img src="certificate.jpg" alt="Business Certificate">
+      <img src="hcert.jpg" alt="Business Certificate">
       <p>Government Business registration Certificate</p>
     </div>
     <div class="gallery-item">
@@ -883,14 +883,14 @@ body {
   <section id="contact" class="contact">
     <h2>Contact Us</h2>
     <p>Call or WhatsApp us at: <strong>+254 748 000578</strong></p>
-    <a href="https://api.whatsapp.com/send?phone=+254748000578&text=Hey+there+tell+me+more+about+StreamQash">
+    <a href="https://api.whatsapp.com/send?phone=+254748000578&text=Hey+there+tell+me+more+about+HeroQash">
   <button class="whatsapp-btn">Whatsapp us</button>
 </a>
   </section>
 
   <!-- FOOTER -->
   <footer class="footer">
-    <p>&copy; 2024 StreamQash Agencies. All rights reserved.</p>
+    <p>&copy; 2024 HeroQash Agencies. All rights reserved.</p>
   </footer>
   <script>
      // Function to toggle the side menu
